src/test/ui/main-wrong-location.stderr
error[E0601]: `main` function not found in crate `main_wrong_location`
   |
help: consider moving one of these function definitions to the crate root
  --> $DIR/main-wrong-location.rs:5:5
   |
LL |     fn main() { }
   |     ^^^^^^^^^^^^^
help: define a function named `main` at the crate root
   |
LL | fn main() {}
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
